# FileEmpower

./: .clang-format  CMakeLists.txt  Color.h  Data.h  Dockerfile  FileSystem.cpp  FileSystem.h  Logger.h  OutputConsoleFE.cpp  OutputConsoleFE.h  OutputFE.cpp  OutputFE.h  README.md  main.cpp
.github/workflows/: cmake.yml
adapter_fs/: BoostFileSystemAdapter.h  FileSystemInterface.h  StdFileSystemAdapter.h
logic_fe/: CommandHandler.cpp  CommandHandler.h  LogicFE.cpp  LogicFE.h  LogicFEImpl.cpp  LogicFEImpl.h
output_viewer/: OutputCRTPViewer.h  OutputConsoleFE.h
